--- a/src/app/pages/Artists/artist-event-create/artist-event-create.component.css
+++ b/src/app/pages/Artists/artist-event-create/artist-event-create.component.css
@@ -10,32 +10,48 @@
   }
 
   .cardcontent{
+    background: #fcf8e3;
     border-radius: 1rem;
-    border: 3px solid #fff;
+    border: 3px solid #000000;
     margin: 2rem;
     width: 30%;
   }
 
-  .input1{
-    margin: 1rem;
-  }
-  .input2{
-    margin: 1rem;
-  }
+.input1{
+  margin: 1rem;
+}
+.input2{
+  margin: 1rem;
+}
+.input3{
+  margin: 1rem;
+}
+.input4{
+  margin: 1rem;
+}
 
   .button-post{
     background-color:#cca027;
     border-radius: 1rem;
     margin: 2rem;
     width: 9%;
+    border: 3px solid #1b1e21;
   }
 
   .text{
     font-family: Arial, Helvetica, sans-serif;
     color:white;
     font-style: normal;
-    font-weight: 500;
+    font-weight: bold;
     font-size: 40px;
     line-height: 47px;
-    padding: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
+.form-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 70vh;
+}
