--- a/src/app/pages/Artists/artist-event-create/artist-event-create.component.html
+++ b/src/app/pages/Artists/artist-event-create/artist-event-create.component.html
@@ -1,58 +1,52 @@
 <app-ArtistNavegation></app-ArtistNavegation>
 <body class="imageBackground">
-<p class="text">Crear evento</p>
-<mat-card class="cardcontent">
-<form #EventForm='ngForm'>
-    <div>
-        <mat-form-field class="input1">
-          <input matInput placeholder="EventName" name="EventName" required
-          [(ngModel)]="eventdata.name" id="seteventname">
-            <mat-error>Es requerido</mat-error>
+<p class="text">Create Event</p>
+<div class="form-container">
+  <mat-card class="cardcontent">
+    <form #EventForm="ngForm">
+      <div>
+        <mat-form-field class="input1" appearance="outline">
+          <mat-icon matPrefix>celebration</mat-icon>
+          <input matInput placeholder="Event Name" name="EventName" required [(ngModel)]="eventdata.name" id="seteventname">
+          <mat-error>It is required</mat-error>
         </mat-form-field>
-    </div>
-        <mat-divider></mat-divider>
-    <div>
-        <mat-form-field class="input2">
-          <input matInput placeholder="EventDescription" name="EventDescription" required
-            [(ngModel)]="eventdata.description" id="seteventdescription">
-            <mat-error>Es requerido</mat-error>
+      </div>
+      <mat-divider></mat-divider>
+      <div>
+        <mat-form-field class="input2" appearance="outline">
+          <mat-icon matPrefix>description</mat-icon>
+          <input matInput placeholder="Event Description" name="EventDescription" required [(ngModel)]="eventdata.description" id="seteventdescription">
+          <mat-error>It is required</mat-error>
         </mat-form-field>
-    </div>
-
-        <mat-divider></mat-divider>
-
-        <div>
-        <mat-form-field appearance="fill" class="example-form-field">
+      </div>
+      <mat-divider></mat-divider>
+      <div>
+        <mat-form-field class="input4" appearance="outline">
+          <mat-icon matPrefix>local_activity</mat-icon>
+          <input matInput placeholder="Event Ticket Link" name="EventTicketLink" [(ngModel)]="eventdata.ticketLink" id="seteventticketlink">
+          <mat-error>It is required</mat-error>
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field class="input3" appearance="outline">
           <mat-label>Choose a date</mat-label>
-          <input matInput [matDatepicker]="datepicker"   (dateInput)="setfecha($event )" id="setdate">
+          <input matInput [matDatepicker]="datepicker" (dateInput)="setfecha($event)" id="setdate">
           <mat-hint>MM/DD/YYYY</mat-hint>
           <mat-datepicker-toggle matSuffix [for]="datepicker"></mat-datepicker-toggle>
-        <!-- #docregion datepicker-actions -->
           <mat-datepicker #datepicker>
             <mat-datepicker-actions>
               <button mat-button matDatepickerCancel>Cancel</button>
               <button mat-raised-button color="primary" matDatepickerApply>Apply</button>
             </mat-datepicker-actions>
           </mat-datepicker>
-        <!-- #enddocregion datepicker-actions -->
         </mat-form-field>
-        </div>
+      </div>
 
-        <div>
-        <mat-form-field>
-            <input matInput placeholder="EventTicketLink" name="EventTicketLink" 
-                [(ngModel)]="eventdata.ticketLink" id="seteventticketlink">
-                <mat-error>Es requerido</mat-error>
-            </mat-form-field>
-        </div>
-        <mat-divider></mat-divider>
-
-
-      </form>
+      <mat-divider></mat-divider>
+    </form>
   </mat-card>
   <mat-card-actions class="button-post">
-      <button mat-button (click) = "addEvent()" id="buttonCreateAndPost">Create and Post</button>
-    </mat-card-actions>
+    <button mat-button (click)="addEvent()" id="buttonCreateAndPost">Create and Post</button>
+  </mat-card-actions>
+</div>
 </body>
-
-
