add artist event

--- a/src/app/pages/Artists/ArtistEvent/ArtistEvent.component.html
+++ b/src/app/pages/Artists/ArtistEvent/ArtistEvent.component.html
@@ -7,8 +7,8 @@
 <mat-card class="example-card-event2">
   <div class="img-card"></div>
     <div class="text-post">
-      <h1>Crea tu evento</h1>
-      <h5>Que otros fanaticos te conozcan por tu arte</h5>
+      <h1>Create Event</h1>
+      <h5>Let other fans know about your art </h5>
     </div>
     <button mat-fab class="add" (click)="insertevent()" id="add"><mat-icon>add</mat-icon></button>
 </mat-card>
