--- a/src/app/pages/Artists/ArtistEvent/ArtistEvent.component.css
+++ b/src/app/pages/Artists/ArtistEvent/ArtistEvent.component.css
@@ -2,7 +2,6 @@
 
 
 .Title{
-  
   font-family: Arial, Helvetica, sans-serif;
   color:whitesmoke;
   text-align: center;
@@ -18,6 +17,7 @@
   justify-content: center;
   justify-items: center;
   background-position: center;
+  line-height: 40px;
   }
 
 .imageBackground{
@@ -64,6 +64,7 @@
   text-align: center;
   font-size: 30px;
   margin: 1rem;
+  font-weight: bold;
 }
 
 .text2 h1{
@@ -146,24 +147,18 @@
 }
 
 .example-card-event2{
-  background-color:#cca027;
   border-radius: 1rem;
   box-shadow: 0  1rem 1rem rgba(0, 0, 0, 0.2);
   display: flex;
   margin-top: 4.0rem;
-  margin-left: 4.0rem;
+  margin-left: auto;
+  margin-right: auto;
   overflow: hidden;
-  width: 40rem;
+  width: 25rem;
   height: 10rem;
-  box-shadow: 0 5px 10px #cca027;
-}
-
-.example-card-event2  .img-card{
-  background-image: url(./postevent.jpg);
-  background-size: cover;
-  width: 40%;
-  height: 100%;
-  border-radius: 1rem;
+  padding: 10px;
+  box-shadow: 0 10px 15px #ff8400;
+  background: white;
 }
 
 .example-card-event2 .text-post{
@@ -182,6 +177,12 @@
 }
 
 .add{
-  background-color: #cca027;
+  background-color: #ff8400;
   margin: 1rem;
+}
+
+.add:hover{
+  background: #f94c10;
+  transform-style: inherit;
+  transform: scale(1.2);
 }
