--- a/src/app/pages/Fanatic/Fanatic-Forum/Fanatic-Forum.component.html
+++ b/src/app/pages/Fanatic/Fanatic-Forum/Fanatic-Forum.component.html
@@ -1,1 +1,33 @@
 <app-fanaticnavigation></app-fanaticnavigation>
+<div class="basic-container">
+    <img src="assets/Forum.png" class="responsive">
+    <div class="centerbuton">
+        <button mat-raised-button class="buttonmain" color="primary" id="add" (click)="goTOCreate()">Crear nuevo foro</button>
+
+    </div>
+    <div class="forums">
+    <div class="center">
+        <p class="forumtitle">Lista de foros</p>
+    </div>
+    <div *ngFor="let item of dataSource.data" class="center">
+        <mat-card class="card">
+            <img src="../../../../assets/images/forum.png" class="imgforum">
+            <div class="info">
+                <h2 class="forumname">{{item.forumname}}</h2>
+                <p class="person">Creado por {{item.userAccount.realname}} {{item.userAccount.lastname}}</p>
+
+            </div>
+            <button mat-button  id="enterforum" class="flag" (click)="gotoForumPage(item)"><mat-icon>flag</mat-icon></button>
+        </mat-card>
+    </div>
+
+
+
+
+
+    </div>
+
+
+
+
+</div>
