--- a/src/app/pages/Fanatic/FanaticForumCreate/FanaticForumCreate.component.html
+++ b/src/app/pages/Fanatic/FanaticForumCreate/FanaticForumCreate.component.html
@@ -8,19 +8,21 @@
 <div class="basic-container">
   
   <div class="Cardforum">
-<mat-card [formGroup]="createform">
+<mat-card >
   <mat-card-title>Create Forum</mat-card-title>
-  <mat-card-header>
-  <h2>Insert name:</h2>
-  <input formControlName="name" class="con" [(ngModel)]="Forum.forumname"  type="name"  id="exampleInputalias" placeholder="Forum Name" required id="forumname">
-        <mat-error  *ngIf="createform.controls['name'].dirty && createform.hasError('required','name')">Es requerido</mat-error>
+  <form [formGroup]="createform">
+  <mat-form-field appearance="outline" class="forumname">
+  <input formControlName="name"  matInput [(ngModel)]="Forum.forumname"  type="name"  id="exampleInputalias" placeholder="Nombre del Nuevo Foro" required id="forumname">
+  <mat-error  *ngIf="createform.controls['name'].dirty && createform.hasError('required','name')">Es requerido</mat-error>
+  </mat-form-field>
   
-  </mat-card-header>
+  <mat-divider></mat-divider>
+
   <mat-form-field appearance="fill" class="area" >
     <mat-label>Description </mat-label>
     <textarea formControlName="description" [(ngModel)]="Forum.forumdescription" matInput type="description" id="forumdescription"></textarea>
   </mat-form-field>
-  
+</form>
   <mat-divider></mat-divider>
   <mat-card-actions align="end">
     <button mat-button [disabled]="!createform.valid" (click)="crearforo()" id="createforum">CREATE</button>
