--- a/src/app/pages/publication/comment-form/comment-form.component.html
+++ b/src/app/pages/publication/comment-form/comment-form.component.html
@@ -16,4 +16,16 @@
     <button mat-button (click)="postComment(txt)" id="postcomment" style="background-color: black; color: white; font-family: Arial, Helvetica, sans-serif; font-weight: bold;">Post Comment</button>
     <div style="padding-right: 10px;"></div>
   </mat-card-actions>
+  <ng-template #errorDialogTemplate let-data >
+      <mat-dialog-content >
+        <div class="message-error">
+          <h1>{{data.errorMessage}}</h1>
+        </div>
+      </mat-dialog-content>
+      <mat-dialog-actions>
+        <button mat-button class="button-message" (click)="closeDialog()">Aceptar</button>
+      </mat-dialog-actions>
+  </ng-template>
 </mat-card>
+
+
