--- a/src/app/pages/rate/rate.component.css
+++ b/src/app/pages/rate/rate.component.css
@@ -1,4 +1,10 @@
 mat-slider {
     width: 70%;
   }
-  
+
+.example-label-container {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 10px 0;
+  max-width: 284px;
+}
