update url of services Music and Album

--- a/src/app/pages/Artists/Album/Album.component.html
+++ b/src/app/pages/Artists/Album/Album.component.html
@@ -9,12 +9,12 @@
 
   <div style="padding-bottom: 10px;"></div>
   <div class="introTitle">
-    Come, see and hear all the albums in Fortlom! 
+    Come, see and hear all the albums in Fortlom!
   </div>
 
   <div *ngIf="whois == 'HomeArtist'">
-    <div align="end" class="mats">
-      <button mat-fab class="add" (click)="CreateAlbum()" id="add" style="background-color: goldenrod;"><mat-icon>add</mat-icon></button>
+    <div class="button-container">
+      <button class="button-add" (click)="CreateAlbum()" id="add">ADD ALBUM</button>
     </div>
     <div style="padding-bottom: 10px;"></div>
   </div>
