--- a/src/app/pages/Artists/Album/Album.component.css
+++ b/src/app/pages/Artists/Album/Album.component.css
@@ -3,10 +3,10 @@
   }
 
   .introTitle{
-  
+
     font-family: Arial, Helvetica, sans-serif;
     color:whitesmoke;
-    
+
     font-style: normal;
     font-size: 60px;
     font-weight: bold;
@@ -19,8 +19,26 @@
     line-height: 1.0em;
     margin-left: 300px;
     margin-right: 300px;
-    
+
 }
+
+.button-container {
+  text-align: right;
+  margin-top: 20px;
+}
+
+.button-add {
+  background-color: goldenrod;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+}
+
+.button-add:hover {
+  background-color: darkgoldenrod;
+}
+
 
 .basic-container {
   text-align: center;
@@ -32,5 +50,5 @@
   background-position: 50% 50%;
   padding-top: 2rem;
   overflow: auto;
-  
+
 }
