--- a/src/app/pages/Artists/Album/CreateAlbum/CreateAlbum.component.html
+++ b/src/app/pages/Artists/Album/CreateAlbum/CreateAlbum.component.html
@@ -2,22 +2,19 @@
 <div style="background-image: url('assets/images/artistlist.jpg');">
   <div style="padding-top: 50px;"></div>
 <mat-card [formGroup]="createform" style="margin-right: auto; margin-left: auto; width: 80%; border-radius: 20px;">
-  <mat-card-title>Create Album</mat-card-title>
+  <mat-card-title style="text-align: center;font-size: 30px; color: #f94c10">Create New Album</mat-card-title>
   <br>
-  <mat-card-header>
-  <h2 style="padding-top: 20px;">Insert name:</h2>
-  <div style="padding-right: 20px;"></div>
+
+  <h2 style="padding-top: 20px;color: #f94c10">Insert name:</h2>
+
       <mat-form-field appearance="outline" style="width: 53%;">
             <mat-label>Album name</mat-label>
             <input matInput formControlName="name" class="con" [(ngModel)]="objectAlbum.name" type="name" required id="albumname" maxlength="20">
             <mat-error *ngIf="createform.controls['name'].dirty && createform.hasError('required') || createform.controls['name'].invalid">Es requerido el nombre</mat-error>
       </mat-form-field>
       <input style="display:none" type="file" id="my-file" (change)="onFileChanged($event)">
-      <div class="loadFileBtn">
-        <button mat-button type="button" class onclick="document.getElementById('my-file').click()"><mat-icon class="iconFileBtn">add_circle</mat-icon></button>
-      </div>
 
-  </mat-card-header>
+  <h2 style="padding-top: 20px;color: #f94c10">Insert description:</h2>
   <mat-form-field appearance="outline" class="area">
     <mat-label>Album description</mat-label>
     <textarea formControlName="description" [(ngModel)]="objectAlbum.description" matInput type="description" id="forumdescription" maxlength="200"></textarea>
@@ -25,11 +22,11 @@
   </mat-form-field>
   <mat-card-footer align="end">
 
-  <button mat-button class="but" [disabled]="!createform.valid" (click)="CrearAlbum()" id="createforum">Create</button>
+  <button mat-button class="but" [disabled]="!createform.valid" (click)="CrearAlbum()" id="createAl" style="color: #171a1d">Create Album</button>
 
   </mat-card-footer>
 
 
 </mat-card>
-<div style="padding-bottom: 24%;"></div>
+<div style="padding-bottom: 10%;"></div>
 </div>
