--- a/src/app/pages/Artists/Album/Album.component.css
+++ b/src/app/pages/Artists/Album/Album.component.css
@@ -2,29 +2,36 @@
     background-color: white;
   }
 
-  .introTitle{
 
-    font-family: Arial, Helvetica, sans-serif;
-    color:whitesmoke;
-
-    font-style: normal;
-    font-size: 60px;
-    font-weight: bold;
-    -webkit-text-stroke:0.25px;
-    -webkit-text-stroke-color: black;
-    position: absolute;
-    top: 100px;
-    left: 0;
-    right: 0;
-    line-height: 1.0em;
-    margin-left: 300px;
-    margin-right: 300px;
-
-}
 
 .button-container {
-  text-align: right;
+  text-align: center;
   margin-top: 20px;
+  margin-bottom: 20px;
+  padding-top: 11rem;
+}
+.button-add {
+  font-size: 20px;
+}
+
+.introTitle{
+
+  font-family: Arial, Helvetica, sans-serif;
+  color:#000000;
+
+  font-style: normal;
+  font-size: 60px;
+  font-weight: bold;
+  -webkit-text-stroke-color: black;
+  position: absolute;
+  top: 100px;
+  left: 0;
+  right: 0;
+  line-height: 1.0em;
+  margin-left: 300px;
+  margin-right: 300px;
+
+
 }
 
 .button-add {
