--- a/src/app/pages/Artists/Album/OneAlbum/OneAlbum.component.html
+++ b/src/app/pages/Artists/Album/OneAlbum/OneAlbum.component.html
@@ -4,44 +4,38 @@
 <div *ngIf="whois == 'HomeFanatic'">
   <app-fanaticnavigation></app-fanaticnavigation>
 </div>
-<div class="basic-container" style="background-image: url('assets/images/artistlist.jpg');">
-  <div style="padding-bottom: 10px;"></div>
-  <div *ngIf="whois == 'HomeArtist'">
-    <div align="end" class="mats">
-      <button mat-fab class="add" (click)="CreateMusic()" id="add" style="background-color: goldenrod;"><mat-icon>add</mat-icon></button>
-    </div>
-    <div style="padding-bottom: 10px;"></div>
-  </div>
-  
-  <mat-card style="margin-right: auto; margin-left: 132px; width: 30%; border-radius: 20px; text-align: center;">
-    <mat-card-title>{{onealbumobject.name}}</mat-card-title>
+<div class="basic-container" >
+  <mat-card class="mat-card-oneAlbum">
+    <mat-card-title class="card-title">{{onealbumobject.name}}</mat-card-title>
     <div>{{onealbumobject.description}}</div>
     <br>
-    <mat-card-content>
-  
+    <mat-card-content class="card-content">
       <app-imagealbum [id]="albumidnumber"></app-imagealbum>
     </mat-card-content>
   </mat-card>
-  <div class="introTitle">
-    Music is love! 
+  <div *ngIf="whois == 'HomeArtist'">
+    <div class="mats">
+      <button mat-fab class="add" (click)="CreateMusic()" id="add"><mat-icon>add</mat-icon></button>
+      <div style="padding-bottom: 20px;"></div>
+    </div>
+    <div style="padding-bottom: 10px;"></div>
   </div>
-  <div style="padding-bottom: 20px;"></div>
-  
   <mat-grid-list cols="3" rowHeight="500px">
     <mat-grid-tile *ngFor="let music of dataSource.data">
-        <mat-card style="border-radius: 20px;">
-          <mat-card-content class="cardContent">
+        <mat-card class="cardMusic-Content" style="border-radius: 20px;">
+          <mat-card-content>
             <mat-card-title style="text-align: center;">{{music.name}}</mat-card-title>
             <img src="assets/images/music.jpg" style="width: 200px;">
             <br>
             <br>
             <a [href]="music.musicUrl">
               <button mat-raised-button style="color: white; background-color: black;">
-                Hear Music!              
+                Hear Music!
               </button>
             </a>
           </mat-card-content>
         </mat-card>
     </mat-grid-tile>
   </mat-grid-list>
+  <div style="padding-bottom: 20px;"></div>
 </div>
