--- a/src/app/pages/Artists/Album/CreateMusic/CreateMusic.component.css
+++ b/src/app/pages/Artists/Album/CreateMusic/CreateMusic.component.css
@@ -1,20 +1,27 @@
-.area
-{
-
+.area {
 width: 100%;
 height: 100%;
 margin-top: 30px;
 }
-.but{
-  height:10%;
-  font-size: 20px;
-  color:black;
-  background-color:#9CC7EF
-}
+
 .con{
 margin-left: 50px;
-
 margin-bottom: 10px;
 width: 50%;
   border-color: black;
+}
+
+.but{
+  border-radius: 10px;
+  font-size: 20px;
+  background-color:#072541;
+  padding: 20px
+}
+mat-card{
+  padding: 3rem;
+  background-color: #F5F5F5;
+  margin-right: auto;
+  margin-left: auto;
+  width: 80%;
+  border-radius: 20px;
 }
