--- a/src/app/pages/Artists/Album/CreateMusic/CreateMusic.component.html
+++ b/src/app/pages/Artists/Album/CreateMusic/CreateMusic.component.html
@@ -1,12 +1,11 @@
 <app-ArtistNavegation></app-ArtistNavegation>
-<div style="background-image: url('assets/images/artistlist.jpg');">
+<div style="background-image: url('https://www.elcorteingles.es/entradas/blog/wp-content/uploads/2022/06/verano.jpg');background-repeat: no-repeat;
+  background-size: 100% auto;">
 <div style="padding-top: 50px;"></div>
-<mat-card [formGroup]="createform" style="margin-right: auto; margin-left: auto; width: 80%; border-radius: 20px;">
+<mat-card class="mat-card" [formGroup]="createform" >
   <mat-card-title>
-    <div style="display: inline-flex; width: 100%;">
+    <div style="text-align: center;">
       Create Music
-      <div style="padding-right: 70%;"></div>
-        Category
     </div>
   </mat-card-title>
   <br>
@@ -18,7 +17,6 @@
         <input matInput formControlName="name" class="con" [(ngModel)]="objectMusic.name" type="name" required id="musicname" maxlength="20">
         <mat-error *ngIf="createform.controls['name'].dirty && createform.hasError('required') || createform.controls['name'].invalid">Es requerido el nombre</mat-error>
       </mat-form-field>
-        <div style="padding-right: 12%;"></div>
     <!--
         <mat-form-field appearance="outline">
           <mat-label>Music category</mat-label>
@@ -29,19 +27,18 @@
         </mat-form-field>
      -->
   </mat-card-header>
-  <div style="padding-bottom: 10px;"></div>
   <mat-form-field appearance="outline" class="area" >
     <mat-label>Music Url</mat-label>
-    <input matInput formControlName="musicurl" [(ngModel)]="objectMusic.musicUrl" id="musicurl">
+    <input matInput formControlName="musicurl" [(ngModel)]="objectMusic.musicUrl" id="musicurl" maxlength="200">
     <mat-error *ngIf="createform.controls['musicurl'].dirty && createform.hasError('required') || createform.controls['musicurl'].invalid">Es requerido el url</mat-error>
   </mat-form-field>
   <mat-card-footer align="end">
 
 
-  <button mat-button class="but" [disabled]="!createform.valid" (click)="CrearMusica()" id="createforum">Create</button>
+  <button mat-button class="but" [disabled]="!createform.valid" (click)="CrearMusica()" id="createforum" style="color: white">Create</button>
 
 
   </mat-card-footer>
 </mat-card>
-<div style="padding-bottom: 24%;"></div>
+<div style="padding-bottom: 20%;"></div>
 </div>
