--- a/src/app/pages/Artists/artist-forums/artist-forums.component.css
+++ b/src/app/pages/Artists/artist-forums/artist-forums.component.css
@@ -1,20 +1,20 @@
 .button-row button{
 
   margin:10px;
-  
+
   }
   .search-form-field
   {
-  
+
     margin:20px;
   }
   .forumtitle{
-  
+
     color:black;
     font-weight: bold;
   }
   .forumname{
-  
+
     color:black;
   }
   .card
@@ -45,9 +45,9 @@
   }
   .mats
   {
-  
+
     margin-top: 2%;
-  
+
   }
   .responsive {
     width: 100%;
@@ -62,7 +62,7 @@
     background-position: 50% 50%;
     overflow: auto;
     background-image: url(./FondoForum.png);
-    
+
   }
   .Cardforum {
     padding-left: 100px;
@@ -72,3 +72,8 @@
     background-image: url('https://media.revistavanityfair.es/photos/60e82b88bf8d45dd8c6f5f39/master/w_3638,h_3006,c_limit/228632.jpg');
     background-size: cover;
   }
+
+
+button{
+  margin-right: 50px;
+}
