--- a/src/app/pages/ForgotPassword/change-password/change-password.component.html
+++ b/src/app/pages/ForgotPassword/change-password/change-password.component.html
@@ -13,15 +13,15 @@
         <input type="password" name="password" id="password" class="form-control"
             [(ngModel)]="password" required>
     </div>
-
+    <br>
     <div class="form-group text-center">
         <label for="confirmPassword">confirmar contraseña</label>
         <input type="password" name="confirmPassword" id="confirmPassword" class="form-control"
             [(ngModel)]="confirmPassword" required>
     </div>
-   
+    <br>
     <div class="form-group">
-        <button class="btn btn-outline-success btn-block" [disabled]="!f.valid" type="submit" id="enter">
+        <button mat-raised-button  [disabled]="!f.valid" type="submit" id="enter">
             <i class="fas fa-sign-in-alt"></i> Cambiar Contraseña</button>
     </div>
 
