--- a/src/app/pages/ForgotPassword/send-email/send-email.component.css
+++ b/src/app/pages/ForgotPassword/send-email/send-email.component.css
@@ -22,3 +22,8 @@
     justify-items: center;
     margin: 0 auto;
 }
+form {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
