--- a/src/app/pages/Fanatic/Fanatic-Forum/Fanatic-Forum.component.css
+++ b/src/app/pages/Fanatic/Fanatic-Forum/Fanatic-Forum.component.css
@@ -1,20 +1,20 @@
 .button-row button{
 
     margin:10px;
-    
+
     }
     .search-form-field
     {
-    
+
       margin:20px;
     }
     .forumtitle{
-    
+
       color:black;
       font-weight: bold;
     }
     .forumname{
-    
+
       color:black;
     }
     .center{
@@ -29,7 +29,7 @@
       display: flex;
       justify-content: space-between;
       flex-direction: row;
-     
+
     }
     .imgforum{
       width: 10%;
@@ -64,20 +64,20 @@
     }
     .mats
     {
-    
+
       margin-top: 2%;
-    
+
     }
     .responsive {
       width: 100%;
-      
+
     }
     .basic-container {
       color: white;
       background-size: cover;
-     
+
       background-image: url(./FondoForum.png);
-      
+
     }
     .Cardforum {
       padding-left: 100px;
@@ -107,7 +107,7 @@
     display: flex;
     flex-direction:column;
     justify-content: center;
-   
+
   }
   .forumname{
    color: white;
@@ -117,6 +117,10 @@
     margin-bottom: 100px;
   }
   .person{
-    
+
 
   }
+
+button{
+  margin-right: 50px;
+}
