--- a/src/app/pages/publication/post-form/post-form.component.css
+++ b/src/app/pages/publication/post-form/post-form.component.css
@@ -16,6 +16,6 @@ button{
   margin:auto;
 }
 .orange-button {
-  background-color: #ffae42; /* Color naranja tipo amarillo */
-  color: #333; /* Color de texto oscuro */
+  background-color: #ffae42;
+  color: #333;
 }
