--- a/src/app/pages/Artists/Album/Album.component.html
+++ b/src/app/pages/Artists/Album/Album.component.html
@@ -33,7 +33,7 @@
             <mat-card-title>{{album.name}}</mat-card-title>
             <div>{{album.description}}</div>
             <br>
-            <app-imagealbum [id]="album.id"></app-imagealbum>
+            <img src="https://images.pexels.com/photos/4200745/pexels-photo-4200745.jpeg" alt="album-default" class="album-image">
           </mat-card-content>
         </mat-card>
       </button>
