--- a/src/app/pages/Fanatic/Fanatic-Forum/Fanatic-Forum.component.html
+++ b/src/app/pages/Fanatic/Fanatic-Forum/Fanatic-Forum.component.html
@@ -3,6 +3,10 @@
     <img src="assets/Forum.png" class="responsive">
     <div class="centerbuton">
         <button mat-raised-button class="buttonmain" color="primary" id="add" (click)="goTOCreate()">Crear nuevo foro</button>
+      <button mat-raised-button color="primary" class="buttonmain" (click)="MyForums()">Ver mis Foros</button>
+
+
+
 
     </div>
     <div class="forums">
@@ -15,19 +19,9 @@
             <div class="info">
                 <h2 class="forumname">{{item.forumname}}</h2>
                 <p class="person">Creado por {{item.userAccount.realname}} {{item.userAccount.lastname}}</p>
-
             </div>
             <button mat-button  id="enterforum" class="flag" (click)="gotoForumPage(item)"><mat-icon>flag</mat-icon></button>
         </mat-card>
     </div>
-
-
-
-
-
     </div>
-
-
-
-
 </div>
